tests/ui/shared_handler_in_service.stderr
error: Service handlers cannot be annotated with #[shared]
 --> tests/ui/shared_handler_in_service.rs:6:14
  |
6 |     async fn my_handler() -> HandlerResult<()>;
  |              ^^^^^^^^^^

error[E0405]: cannot find trait `SharedHandlerInService` in this scope
  --> tests/ui/shared_handler_in_service.rs:11:6
   |
11 | impl SharedHandlerInService for SharedHandlerInServiceImpl {
   |      ^^^^^^^^^^^^^^^^^^^^^^ not found in this scope
